test/param/kbrady/mismatchIntDivZero.good
mismatchIntDivZero.chpl:3: error: Attempt to divide by zero
